[package]
name = "iec60909"
version = "0.1.0"
description = "Short-circuit currents in three-phase a.c. systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rwl/iec60909"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.12"
anyhow = "1"
num-complex = "0.4"
approx = "0.5"
sparsetools = "0.2"
spsolve = { version = "0.1", features = ["rlu"] }
